[gd_scene load_steps=15 format=3 uid="uid://bfwmlte627nn3"]

[ext_resource type="Script" uid="uid://dq6iso7240rx0" path="res://autoload/music_player.gd" id="1_g0o5r"]
[ext_resource type="AudioStream" uid="uid://c1h74i3ymcxfw" path="res://assets/Sounds/Music/One Man Symphony - In The Blink Of An Eye (Free Version, 4 Songs, Attribution Required) - 02 An Instant Burst (Action 02).mp3" id="3_owtah"]
[ext_resource type="AudioStream" uid="uid://b2r1f1pva08uk" path="res://assets/Sounds/Impact/impactPlate_heavy_000.ogg" id="3_su3t4"]
[ext_resource type="AudioStream" uid="uid://oxt8d2ialttx" path="res://assets/Sounds/Impact/impactPlate_heavy_001.ogg" id="4_8myng"]
[ext_resource type="AudioStream" uid="uid://dnfpo2f2npbr8" path="res://assets/Sounds/Win Jingle/jingles_PIZZI10.ogg" id="8_fyq88"]
[ext_resource type="AudioStream" uid="uid://bkavw3ymtivpq" path="res://assets/Sounds/Select/SND_Select_A.ogg" id="8_oo8na"]
[ext_resource type="AudioStream" uid="uid://b8xnixo3y6x3x" path="res://assets/Sounds/Win Jingle/jingles_SAX10.ogg" id="9_oo8na"]
[ext_resource type="AudioStream" uid="uid://bqph4cpwpsyne" path="res://assets/Sounds/Win Jingle/jingles_STEEL10.ogg" id="10_lvi5o"]
[ext_resource type="AudioStream" uid="uid://ua2qgt3g732j" path="res://assets/Sounds/Impact/impactPlate_heavy_002.ogg" id="10_mfo5s"]
[ext_resource type="AudioStream" uid="uid://dahida4d3cjol" path="res://assets/Sounds/Impact/impactPlate_heavy_003.ogg" id="11_qoswp"]
[ext_resource type="AudioStream" uid="uid://c260pyg1oslvd" path="res://assets/Sounds/Impact/impactPlate_heavy_004.ogg" id="12_ai0sd"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_w6hn3"]
random_pitch = 1.2
random_volume_offset_db = 2.0
streams_count = 5
stream_0/stream = ExtResource("3_su3t4")
stream_1/stream = ExtResource("4_8myng")
stream_2/stream = ExtResource("10_mfo5s")
stream_3/stream = ExtResource("11_qoswp")
stream_4/stream = ExtResource("12_ai0sd")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lvi5o"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("8_oo8na")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_i053y"]
random_pitch = 1.2
streams_count = 3
stream_0/stream = ExtResource("8_fyq88")
stream_1/stream = ExtResource("9_oo8na")
stream_2/stream = ExtResource("10_lvi5o")

[node name="MusicPlayer" type="Node"]
script = ExtResource("1_g0o5r")

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_owtah")
volume_db = -10.0
autoplay = true
bus = &"music"

[node name="EnvironmentImpactStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_w6hn3")
volume_db = -5.0
max_polyphony = 5
bus = &"sfx"

[node name="ButtonClickedStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = SubResource("AudioStreamRandomizer_lvi5o")
max_polyphony = 3
bus = &"sfx"

[node name="WinStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = SubResource("AudioStreamRandomizer_i053y")
volume_db = 3.0
bus = &"sfx"
